# ChangeLog for dev-perl/PPIx-Regexp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/PPIx-Regexp/ChangeLog,v 1.32 2012/05/22 08:59:54 johu Exp $

  22 May 2012; Johannes Huber <johu@gentoo.org> PPIx-Regexp-0.26.0.ebuild:
  Stable for x86, wrt bug #412963

  26 Apr 2012; Agostino Sarubbo <ago@gentoo.org> PPIx-Regexp-0.26.0.ebuild:
  Stable for amd64, wrt bug #412963

  21 Apr 2012; Torsten Veller <tove@gentoo.org> -PPIx-Regexp-0.25.0.ebuild:
  Cleanup

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org> PPIx-Regexp-0.25.0.ebuild,
  PPIx-Regexp-0.26.0.ebuild:
  Drop sparc keywords

*PPIx-Regexp-0.26.0 (25 Feb 2012)

  25 Feb 2012; Torsten Veller <tove@gentoo.org> +PPIx-Regexp-0.26.0.ebuild:
  Version bump

  18 Feb 2012; Torsten Veller <tove@gentoo.org> -PPIx-Regexp-0.21.0.ebuild,
  -PPIx-Regexp-0.22.0.ebuild, -PPIx-Regexp-0.23.0.ebuild:
  Cleanup

*PPIx-Regexp-0.25.0 (09 Jan 2012)

  09 Jan 2012; Torsten Veller <tove@gentoo.org> +PPIx-Regexp-0.25.0.ebuild:
  Version bump

*PPIx-Regexp-0.23.0 (11 Dec 2011)

  11 Dec 2011; Torsten Veller <tove@gentoo.org> +PPIx-Regexp-0.23.0.ebuild:
  Version bump

*PPIx-Regexp-0.22.0 (30 Nov 2011)

  30 Nov 2011; Torsten Veller <tove@gentoo.org> +PPIx-Regexp-0.22.0.ebuild:
  Version bump

  06 Nov 2011; Raúl Porcel <armin76@gentoo.org> PPIx-Regexp-0.21.0.ebuild:
  Add ~sparc wrt #355385

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -PPIx-Regexp-0.19.0.ebuild,
  -PPIx-Regexp-0.20.0.ebuild:
  Cleanup

*PPIx-Regexp-0.21.0 (23 Jul 2011)

  23 Jul 2011; Torsten Veller <tove@gentoo.org> +PPIx-Regexp-0.21.0.ebuild:
  Version bump

*PPIx-Regexp-0.20.0 (03 Apr 2011)

  03 Apr 2011; Torsten Veller <tove@gentoo.org> +PPIx-Regexp-0.20.0.ebuild:
  Version bump

  02 Apr 2011; Torsten Veller <tove@gentoo.org> -PPIx-Regexp-0.16.ebuild,
  -PPIx-Regexp-0.17.ebuild, -PPIx-Regexp-0.18.ebuild:
  Cleanup

*PPIx-Regexp-0.19.0 (04 Mar 2011)
