@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST PPIx-Regexp-0.026.tar.gz 146293 RMD160 8ed3eafbefd5c19f5c17fb283102934dbd991e6d SHA1 0e3f94e81eb5821ba20cf5dda6338f7bfaa1aadb SHA256 9869b8aab675704973d293115f9a10943a5a9c352c3b6c4feeaa70596a69488a
+DIST PPIx-Regexp-0.027.tar.gz 146377 RMD160 c505da5bbcd9ff5a60060372948c7c3ccc19d047 SHA1 e4bf248a7a5612420526a1ae9778fb13de1eb162 SHA256 db5ddfbc2c03a437acef62d236b0aef05cc65ccf80c37ece5b25fcb0c6c082b9
 EBUILD PPIx-Regexp-0.26.0.ebuild 540 RMD160 c0e58b2afe07da51ffb4930558ade2da1a74d5d3 SHA1 840057993e6a25b23cd4844ed158b683cff010a7 SHA256 3235dac36355ed91f22470689e157dd86fb644481cf62cc168acf09d9bcb0a91
-MISC ChangeLog 4253 RMD160 5aecf8e7adaefc76d27632433f72ffde9044a8e0 SHA1 28db621a1add716e17cfcfbf98bec3ec3fed993d SHA256 685d71f0777199f7bf0675b5409a8cbdaa64385a1f7a65139a9926244b50dac0
+EBUILD PPIx-Regexp-0.27.0.ebuild 542 RMD160 0617021b2144f9503e2c804496d90162fa07fc27 SHA1 6b558467ebcdd3387977c6e983ac30b25490fde7 SHA256 4ace5f9e03a896c6d89da776eb4bc4e04c11a0258b863c3f3a32861a91df1ae2
+MISC ChangeLog 4380 RMD160 d4f6279c7998d60d79696f0a42f1b0593a354dab SHA1 6ab9110a9934c311c94f797fd99f7acaa7cbe258 SHA256 5fce9a9fd3dd50ba1c2effe01c03290d69aca0e25985abe6a6aea4fbe1102974
 MISC metadata.xml 237 RMD160 19e6c2c49fd4eceb290c188b86a35bce7c64aad8 SHA1 4bd4329f5502382d65e8896c9128fb8c4edbb185 SHA256 b2780963546076421e64171ec88215f4d620e361c7f7470bd6e9cb5b1427de30
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPu1WJAAoJEO+t9ga+3I3aE78H/iMjBtNySFPCvpffpIIiu1TP
-FNhTObWS4qm32Z14jJ0wGqToT3jFZwoIPGiKERKeigbrJUq+u3zKr6AhxFXBC+kc
-VVDzCYjdNXufABJWIpzif3PwVEQ/XMGb6+yqSZd8fN6+gbReCIPGY75GlXfzFkFc
-QVTfiNgDFtPoQnol0AULa/BdPA7by2Hj0lyWPwlpDU7O+DWGKAfwnTGkn+fM71xq
-ir9U2MpEzOHa2r0aLM5zsH61QJLtZUH6m49jQnYJ/Mlo+gpukBqcd893/MwX9v/x
-5pEu0KkxUGJ17W9evU9sM9S1v1ZC8HfVRbJq5D1qJOp4Wf7O9d7n5R4DWDwQ14M=
-=oO6M
+iEYEAREIAAYFAk/HtSwACgkQV3J2n04Eauw6vwCdEcS4wxo3DVfFOoZkhg5lKSV9
+h54AoMIih5tAOXsbzZZXV4y9/3KtkFn/
+=b0Nu
 -----END PGP SIGNATURE-----
