@@ -1,0 +1,23 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PPIx-Regexp/PPIx-Regexp-0.27.0.ebuild,v 1.1 2012/05/31 18:15:02 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=WYANT
+MODULE_VERSION=0.027
+inherit perl-module
+
+DESCRIPTION="Represent a regular expression of some sort"
+
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~x86"
+IUSE=""
+
+RDEPEND="dev-perl/List-MoreUtils
+	dev-perl/PPI
+	virtual/perl-Scalar-List-Utils"
+DEPEND="${RDEPEND}
+	virtual/perl-Module-Build"
+
+SRC_TEST=do
