@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/PPIx-Regexp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PPIx-Regexp/ChangeLog,v 1.32 2012/05/22 08:59:54 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PPIx-Regexp/ChangeLog,v 1.33 2012/05/31 18:15:02 tove Exp $
+
+*PPIx-Regexp-0.27.0 (31 May 2012)
+
+  31 May 2012; Torsten Veller <tove@gentoo.org> +PPIx-Regexp-0.27.0.ebuild:
+  Version bump
 
   22 May 2012; Johannes Huber <johu@gentoo.org> PPIx-Regexp-0.26.0.ebuild:
   Stable for x86, wrt bug #412963
